--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,25 +8,26 @@ packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.110.0"
-uvicorn = "^0.29.0"
-sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
-alembic = "^1.13.1"
-asyncpg = "^0.29.0"
+fastapi = "^0.115.12"
+uvicorn = "^0.34.2"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
+alembic = "^1.15.2"
+asyncpg = "^0.30.0"
 invoke = "^2.2.0"
-pyjwt = "^2.8.0"
-behave = "^1.2.6"
-pydantic-settings = "^2.2.1"
-tzdata = "^2024.1"
-pytest-env = "^1.1.3"
+pyjwt = "^2.10.1"
+pydantic-settings = "^2.9.1"
+tzdata = "^2025.2"
+pytest-env = "^1.1.5"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.1.1"
-pytest-asyncio = "^0.23.6"
+pytest = "^8.3.5"
+pytest-asyncio = "^0.26.0"
 pytest-async-sqlalchemy = "^0.2.0"
-faker = "^24.3.0"
-httpx = "^0.27.0"
+faker = "^37.1.0"
+httpx = "^0.28.1"
+black = "^25.1.0"
 
 [build-system]
 requires = ["poetry-core"]
