removed redundant db layer, finalyzed weather service

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,15 +10,14 @@ packages = [{include = "app"}]
 python = "^3.12"
 fastapi = "^0.115.12"
 uvicorn = "^0.34.2"
-sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
-alembic = "^1.15.2"
-asyncpg = "^0.30.0"
 invoke = "^2.2.0"
 pyjwt = "^2.10.1"
 pydantic-settings = "^2.9.1"
 tzdata = "^2025.2"
 pytest-env = "^1.1.5"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+aiohttp = "^3.11.18"
+pytz = "^2025.2"
 
 
 [tool.poetry.group.dev.dependencies]
